# English-Poll-Bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260629_0001_whatsapp_connectors_and_sqlalchemy.py
app/: __init__.py  auth.py  config.py  database.py  db_runtime.py  greenapi.py  main.py  models.py  question_generator.py  runtime.py  scheduler.py  scheduler_worker.py  services.py  waha.py  whatsapp.py
app/api/: __init__.py  files.py  helpers.py  models.py  serializers.py
app/api/models/: __init__.py  actions.py  auth.py  chats.py  learners.py  poll.py  roster.py  (+4 more)
app/core/: auth.py  docs.py  logging.py
app/models/: __init__.py  incoming_webhook.py  poll.py  tenant.py  text.py  text_poll_coverage_state.py  whatsapp_connector.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  index.html  landing.html  login.html  texts.html
docs/: architecture.md  roadmap.md  runbook.md
docs/provider-openapi/: greenapi-llms.txt  greenapi-note.md  greenapi-reference.html  waha-openapi.json
tests/: test_api.py  test_app_factory.py  test_config.py  test_database_sql.py  test_docs_security.py  test_documentation.py  test_greenapi.py  test_poll_pool.py  test_question_generator.py  test_readiness.py  test_scheduler.py  test_services.py  test_ui_assets.py  test_waha.py
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  types.ts
(+26 files in other folders)
