[project]
name = "english-whatsapp-bot"
version = "0.1.0"
description = "FastAPI WhatsApp learning poll bot using GreenAPI and Gemini."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
