[project]
name = "english-whatsapp-bot"
version = "0.1.0"
description = "FastAPI WhatsApp learning poll bot using GreenAPI and Gemini."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.36",
    "tzdata>=2024.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["B008"]
